Bug 384219 - Download manager doesn't fail downloads properly.  Patch by Edward Lee <edilee@gmail.com>. r=sdwilsh